<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="55dp"
        android:layout_height="53dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="49dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/schedule" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="41dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/add" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="274dp"
        android:layout_height="69dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="69dp"
        android:gravity="center"
        android:text="@string/help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="84dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="84dp"
        android:text="@string/schedule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="191dp"
        android:layout_height="67dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="110dp"
        android:gravity="center"
        android:text="@string/support"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="42dp"
        android:layout_height="43dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/dog" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="180dp"
        android:layout_height="32dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="84dp"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

</androidx.constraintlayout.widget.ConstraintLayout>